Retirage de .history

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,8 @@
       gtag('js', new Date());
       gtag('config', 'G-K4EJ3NRTQS');
     </script>
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
